fix spacing

--- a/_sass/layout.scss
+++ b/_sass/layout.scss
@@ -230,6 +230,7 @@ header {
 	}
 
 	&__grats {
+		line-height: 2.5rem;
 		font-size: 3rem;
 		margin: 10px 0 10px 0;
 	}
